src-ken&y/objects/GL_Account__c.object
<CustomObject>
    <customHelpPage>HelpGLAccount</customHelpPage>
    <description>Table of acceptable General Ledger Numbers or Names with associated Cross Reference Information</description>
    <fields>
        <fullName>Account_Range_From__c</fullName>
        <formula>GL_Type__r.Account_Range_From__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Range From</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Range_To__c</fullName>
        <formula>GL_Type__r.Account_Range_To__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Range To</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Select box if GL account is active</description>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Cash_Flow_Report_Cash__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Cash Flow Report Cash</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Cash_Flow_Report_Financing_Activity__c</fullName>
        <inlineHelpText>Cash Flow Report Financing Activity</inlineHelpText>
        <label>Cash Flow Financing</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Short-term Loan From Bank Increase/(Decrease)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Cash_Flow_Report_Investing_Activity__c</fullName>
        <inlineHelpText>Cash Flow Report Investing Activity</inlineHelpText>
        <label>Cash Flow Investing</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Investment from Parent Company Increase/(Decrease)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Cash_Flow_Report_Operating_Activity__c</fullName>
        <inlineHelpText>Cash Flow Report Operating Activity</inlineHelpText>
        <label>Cash Flow Operating</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Accounts Receivable Decrease/(Increase)</fullName>
                </value>
                <value>
                    <fullName>Accounts Payable Decrease/(Increase)</fullName>
                </value>
                <value>
                    <fullName>Inventory Decrease/(Increase)</fullName>
                </value>
                <value>
                    <fullName>Loss on Sale of Equipment (Current Period)</fullName>
                </value>
                <value>
                    <fullName>Depreciation Expense (Current Period)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Cash_Flow_Report_Section_Grouping__c</fullName>
        <description>Drives the report section grouping on cash flow statement financial reports.</description>
        <inlineHelpText>The report section grouping on cash flow statement financial reports in which this GL account displays.</inlineHelpText>
        <label>Cash Flow Section</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Operating Activities</fullName>
                </value>
                <value>
                    <fullName>Investing Activities</fullName>
                </value>
                <value>
                    <fullName>Financing Activities</fullName>
                </value>
                <value>
                    <fullName>Cash</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Cash_Flow_Subsection__c</fullName>
        <label>Cash Flow Subsection</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Cash_Flow_Report_Section_Grouping__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Amortization Expense</fullName>
                </value>
                <value>
                    <fullName>Accounts Payable</fullName>
                </value>
                <value>
                    <fullName>Depreciation Expense</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Prepaid</fullName>
                </value>
                <value>
                    <fullName>Accounts Receivable</fullName>
                </value>
                <value>
                    <fullName>Inventory</fullName>
                </value>
                <value>
                    <fullName>Capital Expenditure</fullName>
                </value>
                <value>
                    <fullName>Interco Investing</fullName>
                </value>
                <value>
                    <fullName>Short Term</fullName>
                </value>
                <value>
                    <fullName>Long Term Loan</fullName>
                </value>
                <value>
                    <fullName>Short Term Loan</fullName>
                </value>
                <value>
                    <fullName>Stock</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contra_Account__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Contra Account</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <description>Description or reference information for GL account</description>
        <label>Description</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ExtId__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>FX_Type__c</fullName>
        <label>FX Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Monetary Cash</fullName>
                </value>
                <value>
                    <fullName>Monetary Non-cash</fullName>
                </value>
                <value>
                    <fullName>Non-monetary</fullName>
                </value>
                <value>
                    <fullName>P/L Monetary</fullName>
                </value>
                <value>
                    <fullName>P/L Non-monetary</fullName>
                </value>
                <value>
                    <fullName>Historical</fullName>
                </value>
                <value>
                    <fullName>Statistical</fullName>
                </value>
                <value>
                    <fullName>RFX</fullName>
                </value>
                <value>
                    <fullName>UFX</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>GL_Account_Name__c</fullName>
        <label>GL Account Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GL_Account_Number__c</fullName>
        <label>GL Account Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GL_Account_Unique__c</fullName>
        <description>Unique key to prevent duplicate GL Accounts with the same name.</description>
        <externalId>true</externalId>
        <inlineHelpText>Unique key to prevent duplicate GL accounts with the same name.</inlineHelpText>
        <label>GL Account Unique</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>GL_Group__c</fullName>
        <formula>BLANKVALUE(SubAccount_of__r.Name, Name)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>GL Group</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GL_Type_Code__c</fullName>
        <label>GL Type Code</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GL_Type__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>GL Type</label>
        <referenceTo>GL_Type__c</referenceTo>
        <relationshipLabel>GL Accounts</relationshipLabel>
        <relationshipName>GL_Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Include_in_Budgets__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Include in Budgets</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Income_Statement_Report_Section_Grouping__c</fullName>
        <inlineHelpText>Income Statement Report Section Grouping</inlineHelpText>
        <label>Income Statement Section</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Revenue</fullName>
                </value>
                <value>
                    <fullName>Less</fullName>
                </value>
                <value>
                    <fullName>Cost of Goods Sold</fullName>
                </value>
                <value>
                    <fullName>Operating Expenses</fullName>
                </value>
                <value>
                    <fullName>General &amp; Administrative Expenses</fullName>
                </value>
                <value>
                    <fullName>Other Revenue &amp; Expenses</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Non_Cash__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether this is a Non Cash GL Account</description>
        <label>Non Cash</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Normal_Balance__c</fullName>
        <description>Select Credit or Debit if this account usually has a credit or debit balance</description>
        <inlineHelpText>&quot;Credit&quot; or &quot;Debit&quot;, depending if this account usually has a credit or debit balance.</inlineHelpText>
        <label>Normal Balance</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Credit</fullName>
                </value>
                <value>
                    <fullName>Debit</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Order__c</fullName>
        <label>Order</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Parent_GL_Account_Number__c</fullName>
        <formula>SubAccount_of__r.GL_Account_Number__c</formula>
        <label>Parent GL Account Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Report_Section_Grouping__c</fullName>
        <description>Provides grouping of report sections on financial reports</description>
        <inlineHelpText>The report section grouping on balance sheet statement financial reports in which this GL account displays.</inlineHelpText>
        <label>Balance Sheet Report Section Grouping</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Current Assets</fullName>
                </value>
                <value>
                    <fullName>Non-Current Assets</fullName>
                </value>
                <value>
                    <fullName>Current Liabilities</fullName>
                </value>
                <value>
                    <fullName>Non-Current Liabilities</fullName>
                </value>
                <value>
                    <fullName>Shareholder Equity</fullName>
                </value>
                <value>
                    <fullName>Revenue</fullName>
                </value>
                <value>
                    <fullName>Cost of Goods Sold</fullName>
                </value>
                <value>
                    <fullName>Operating Expense</fullName>
                </value>
                <value>
                    <fullName>Other Expense</fullName>
                </value>
                <value>
                    <fullName>Interest and Tax Expenses</fullName>
                </value>
                <value>
                    <fullName>Gross Income</fullName>
                </value>
                <value>
                    <fullName>Equity</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Report_Section__c</fullName>
        <description>Please select the section of the financial report that this GL account will eventually show up under.</description>
        <label>Report Section</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Current Assets</fullName>
                </value>
                <value>
                    <fullName>Long Term Assets</fullName>
                </value>
                <value>
                    <fullName>Current Liabilities</fullName>
                </value>
                <value>
                    <fullName>Long-Term Liabilities</fullName>
                </value>
                <value>
                    <fullName>Shareholder Equity</fullName>
                </value>
                <value>
                    <fullName>Revenue</fullName>
                </value>
                <value>
                    <fullName>Cost of Goods Sold</fullName>
                </value>
                <value>
                    <fullName>Operating Expense</fullName>
                </value>
                <value>
                    <fullName>Other Expense</fullName>
                </value>
                <value>
                    <fullName>Interest and Tax Expenses</fullName>
                </value>
                <value>
                    <fullName>Gross Income</fullName>
                </value>
                <value>
                    <fullName>Assets</fullName>
                </value>
                <value>
                    <fullName>Liabilities &amp; Equity</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Report_Sub_Section__c</fullName>
        <label>Report Sub Section</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reports__c</fullName>
        <label>Reports</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>AP/AR Aging</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Statement_Type__c</fullName>
        <description>Select Income Statement, Balance Sheet, or None, depending on the statement type</description>
        <inlineHelpText>The statement type for this GL account. Can be either &quot;Income Statement&quot;, &quot;Balance Sheet&quot;, or &quot;None&apos;&quot;.</inlineHelpText>
        <label>Statement Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Income Statement</fullName>
                </value>
                <value>
                    <fullName>Balance Sheet</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SubAccount_of__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This account is the subaccount of this parent account. If left blank, there is no parent account.</description>
        <label>SubAccount of</label>
        <referenceTo>GL_Account__c</referenceTo>
        <relationshipLabel>GL Account</relationshipLabel>
        <relationshipName>GL_Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Revenue</fullName>
                </value>
                <value>
                    <fullName>Expense</fullName>
                </value>
                <value>
                    <fullName>Asset</fullName>
                </value>
                <value>
                    <fullName>Liability</fullName>
                </value>
                <value>
                    <fullName>Equity</fullName>
                </value>
                <value>
                    <fullName>--None--</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>GL Account</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>GL_Type__c</columns>
        <columns>SubAccount_of__c</columns>
        <columns>Description__c</columns>
        <columns>Active__c</columns>
        <columns>Order__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>GL Account</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>GL Accounts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>GL_Account_Number</fullName>
        <active>true</active>
        <errorConditionFormula>GL_Account_Number__c    &lt;&gt;   null  &amp;&amp;  GL_Type__c  = null</errorConditionFormula>
        <errorMessage>This GL Account cannot have GL Account Number filled when there is no GL Type associated with it.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>GL_Type_Missing_Check</fullName>
        <active>true</active>
        <errorConditionFormula>ISBLANK(GL_Type__c)</errorConditionFormula>
        <errorMessage>GL Type can not be blank.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>GL_Type_Validation</fullName>
        <active>true</active>
        <description>Validate that GL Type on Parent and Child is same</description>
        <errorConditionFormula>NOT(ISBLANK(SubAccount_of__c)) &amp;&amp;
GL_Type__c !=  SubAccount_of__r.GL_Type__c</errorConditionFormula>
        <errorMessage>GL Type must match the Parent&apos;s GL Type</errorMessage>
    </validationRules>
</CustomObject>